# flatpak-platform-plugin

./: CMakeLists.txt  README.md  flatpak-platform-plugin.kdev4
src/: CMakeLists.txt  platformplugin.cpp  platformplugin.h  qflatpakfiledialog.cpp  qflatpakfiledialog.h  qflatpakglobal.cpp  qflatpakglobal.h  qflatpakhintssettings.cpp  qflatpakhintssettings.h  qflatpakintegration.cpp  qflatpakintegration.h  qflatpakmain.cpp  qflatpakplatform.json  qflatpakplatformservices.cpp  qflatpakplatformservices.h  qflatpakplatformservices.json  qflatpakplatformservicesplugin.cpp  qflatpakplatformservicesplugin.h  qflatpakplatformtheme.cpp  qflatpakplatformtheme.h  qflatpakplatformthemeplugin.cpp  qflatpakplatformthemeplugin.h  qflatpakservices.cpp  qflatpakservices.h  qflatpaksystemtrayicon.cpp  qflatpaksystemtrayicon.h  qsystemtrayicon.cpp  qsystemtrayicon_p.h
